<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/feedbackSuccessRoot" android:background="#f2f2f2" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/feedbackHeader" android:background="#f2f2f2" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="62dp" android:paddingStart="15dp" android:paddingEnd="12dp">
                <ImageButton android:id="@+id/feedbackHeaderBackBtn" android:background="@android:color/transparent" android:padding="8dp" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/ic_model_config_back" android:scaleType="centerInside" android:contentDescription="@string/action_back"/>
                <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#333333" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/feedback_title" android:layout_weight="1" android:layout_marginStart="4dp"/>
                <TextView android:textSize="16sp" android:textColor="#333333" android:id="@+id/feedbackHeaderRecordsEntry" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_records_title"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
                <ImageView android:layout_width="135dp" android:layout_height="138dp" android:layout_marginTop="40dp" android:src="@drawable/feedback_success_art" android:scaleType="fitCenter" android:contentDescription="@string/feedback_success_art_desc"/>
                <TextView android:textSize="16sp" android:textColor="#333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/feedback_success_message"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@+id/feedbackSuccessBottomBar" android:paddingTop="6dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="40dp" android:paddingEnd="40dp">
                <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:id="@+id/feedbackSuccessViewRecordsBtn" android:background="@drawable/bg_feedback_btn_primary" android:layout_width="match_parent" android:layout_height="45dp" android:text="@string/feedback_view_records"/>
        </LinearLayout>
</LinearLayout>
