<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:paddingTop="20dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp"/>
    <TextView android:textSize="20sp" android:textStyle="0x00000001" android:textColor="#ff1f1f1f" android:gravity="center" android:id="@id/feedbackCloseDialogTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback_close_feedback"/>
    <TextView android:textSize="16sp" android:textColor="#ff333333" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/feedback_close_confirm_message"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp"/>
        <TextView android:textSize="16sp" android:textColor="#e5000000" android:gravity="center" android:id="@id/feedbackCloseDialogCancel" android:background="@drawable/bg_feedback_dialog_btn_cancel" android:layout_width="0dp" android:layout_height="44dp" android:text="@string/action_cancel" android:layout_weight="1"/>
        <TextView android:textSize="16sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/feedbackCloseDialogConfirm" android:background="@drawable/bg_feedback_btn_primary" android:layout_width="0dp" android:layout_height="44dp" android:text="@string/action_confirm" android:layout_weight="1" android:layout_marginStart="16dp"/>
